little tweaks, and update of §1

--- a/forallx-adl-frontmatter.tex
+++ b/forallx-adl-frontmatter.tex
@@ -2,7 +2,7 @@
 \thispagestyle{empty}
 
 ~\\[4cm]
-\begin{center}\forallx\ \textsc{adelaide}\end{center}
+\begin{center}\forallxadl \end{center}
 \newpage \thispagestyle{empty} ~\\
 \newpage \thispagestyle{empty}
 ~\\[2cm]
@@ -30,7 +30,7 @@
 
 {\copyright\ \ifthenelse{\year=2005}{\number\year}{2005–\number\year} by P.D.\ Magnus, Tim Button, and Antony Eagle. Some rights reserved.
 
-This version of \forallx\ Adelaide is current as of \today.
+This version of \forallxadl\ is current as of \today.
 
 \medskip
 
@@ -47,9 +47,11 @@ This book, like its predecessors, is released under a Creative Commons license (
 \begin{quote}
 	{\small This work is licensed under the Creative Commons Attribution 4.0 International License. To view a copy of this license, visit \href{https://creativecommons.org/licenses/by/4.0/}{\nolinkurl{creativecommons.org/licenses/by/4.0/}} or send a letter to Creative Commons, PO Box 1866, Mountain View, CA 94042, USA.} 
 \end{quote} \medskip
+
+
 \vfill
 
-Typesetting was carried out entirely in \XeLaTeX. The body text is set in Constantia; math is set in Cambria Math; sans serif in Calibri; and monospaced text in Consolas. The style for typesetting proofs is based on \texttt{fitch.sty} (v0.4) by Peter Selinger, University of Ottawa.
+Typesetting was carried out entirely in \XeLaTeX\ using the \texttt{Memoir} class. The body text is set in Constantia; math is set in Cambria Math; sans serif in Calibri; and monospaced text in Consolas. The style for typesetting proofs is based on \texttt{fitch.sty} (v0.4) by Peter Selinger, University of Ottawa.
 
 \newpage
 \tableofcontents*
