--- a/forallx-adl-what.tex
+++ b/forallx-adl-what.tex
@@ -14,15 +14,15 @@
 \chapter{Arguments}\label{argRaining}\label{s:Arguments}
 Logic is the business of evaluating arguments – identifying some of the good ones and explaining why they are good. So what is an argument?
 
-In everyday language, we sometimes use the word `argument' to talk about belligerent shouting matches. Logic is not concerned with such teeth-gnashing and hair-pulling. They are not arguments, in our sense; they are disagreements. 
+In everyday language, we sometimes use the word `argument' to talk about belligerent shouting matches. Logic is not concerned with such teeth-gnashing and hair-pulling. They are not arguments, in our sense; they are disputes. A dispute like this is often more about expressing feelings than it is about  persuasion. 
 
-Giving an argument, in the sense relevant to logic (and other disciplines, like law and philosophy), is something more like \emph{making a case}. Giving an \define{argument}, in our sense, involves presenting reasons that are intended to favour, or support, a specific claim. Consider this example of an argument that someone might give:
+Offering an \define{argument}, in the sense relevant to logic (and other disciplines, like law and philosophy), is something more like \emph{making a case}. It involves presenting reasons that are intended to favour, or support, a specific claim. Consider this example of an argument that someone might give:
 	\begin{earg}
 		\item[] It is raining heavily.
 		\item[] If you do not take an umbrella, you will get soaked.
 		\item[So:] You should take an umbrella.
 	\end{earg}
-We here have a series of sentences. The word `So' on the third line indicates that the final sentence expresses the \define{conclusion} of the argument. The two sentences before that express \define{premises} of the argument. If the argument is well-constructed, the premises provide reasons in favour of the conclusion. In this example, the premises do seem to support the conclusion. At least they do, given the tacit assumption that you do not wish to get soaked.
+We here have a series of sentences. The word `So' on the third line indicates that the final sentence expresses the \define{conclusion} of the argument. The two sentences before that express \define{premises} of the argument. If the argument is well-constructed, the premises provide reasons in favour of the conclusion. In this example, the premises do seem to support the conclusion. At least they do, given the tacit assumption that you do not wish to get soaked. 
 
 This is the sort of thing that logicians are interested in. We shall say that an argument is any collection of premises, together with a conclusion.\footnote{Because arguments are made of sentences, logicians are very concerned with the details of particular words and phrases appearing in sentences. Logic thus also has close connections with linguistics, particularly that subdisipline of linguistics known as \define{semantics}, the theory of meaning.}
 
@@ -50,11 +50,12 @@ And these expressions often indicate that we are dealing with a premise, rather 
 	\end{center}
 But in analysing an argument, there is no substitute for a good nose.
 
+In a good argument, the premises provide reasons for the conclusion. We are interested in understanding and analysing arguments because of this. Offering a good argument to someone emphasises some reasons that favour the conclusion. Reasonable people, we hope, may change their mind when they are given good reasons to do so. And so offering a good argument might \emph{persuade} a reasonable person to accept its conclusion. We return to this issue of reasoning and argument a little later, in §\ref{ss:reasoning}.
 
 \keyideas{
 	\item An argument is a collection of sentences, divided into one or more premises and a single conclusion.
 	\item The conclusion may be indicated by `so', `therefore' or other expressions; the premises indicated by `since' or `because'.
-	\item The premises are supposed to support the conclusion, though whether they do so is another matter.
+	\item The premises are intended to support the conclusion – though whether they do so is another matter.
 }
 
 
@@ -129,7 +130,7 @@ The conclusion of this argument is ridiculous. Nevertheless, it follows from the
 
 \emph{Why} is this argument conclusive? The most important factor for us in considering what makes an argument conclusive is to examine the argument's \define{structure} – the grammatical forms of the premises and conclusion. An argument will be conclusive if its structure \emph{guarantees} that its premises \emph{support} the conclusion. In the present case, one premise says that oranges are in one of two categories; the other premise says that oranges are not in the first category. We conclude that they are in the second category. The premises and conclusion are about oranges. But it is plausible to think that \emph{any} argument with this same sort of structure must be conclusive, whether we are talking about oranges, or cars – or anything really. 
 
-\section{Reasons to believe}
+\section{Reasons to believe}\label{ss:reasoning}
 
 A conclusive argument, in the logician's sense, links the premises to the conclusion. It turns the reasons you have for accepting to the premises into reasons to accept its conclusion. But a conclusive argument need not provide you with a reason to believe the conclusion. One way this can happen is when you don't accept any of the premises in the first place. When the premises support the conclusion, that might just mean that they \emph{would} be excellent reasons to accept the conclusion – \emph{if only they were true}!
 
