--- a/forallx-adl.sty
+++ b/forallx-adl.sty
@@ -74,7 +74,7 @@ SizeFeatures={Size=42}]{Constantia Bold Italic}
 %    ****************************************
 % the title of the book
 \newcommand*{\forallx}{\texttt{forall}\script{x}}
-\newcommand*{\forallxadl}{\texttt{forall}\script{x}\texttt{:Adelaide 2017}}
+\newcommand*{\forallxadl}{\texttt{forall}\script{x} \textsc{adelaide}}
 % The version number of the book is a 5 digit integer:
 % the last digit of the year, the month, the day of the month
 \newcounter{dummy}
