revised §§1–3, new exercises, revised material on reasons for belief and general expansions and clarifications

--- a/forallx-adl-fol.tex
+++ b/forallx-adl-fol.tex
@@ -368,7 +368,7 @@ In the sentence `$\enot(Bk \eif Bb)$', the scope of `$\enot$' is the entire sent
 The moral of the story is simple. When you are using conditionals, be very careful to make sure that you have sorted out the scope correctly. 
 
 \section{Dealing with complex adjectives%syncategorematic adjectives
-}
+}\label{s:complex_adj}
 When we encounter a sentence like 
 	\begin{earg}
 		\item[\ex{syn1}] Herbie is a white car,
