updated author order and some details, minor correction, update to do list :(

--- a/forallx-adl-backmatter.tex
+++ b/forallx-adl-backmatter.tex
@@ -7,22 +7,23 @@
 \subsubsection*{Acknowledgements}
 \addtocontents{toc}{\vspace{\normalbaselineskip}}
 \addcontentsline{toc}{chapter}{Acknowledgements, etc.}
-P.D.\ Magnus would like to thank the people who made this project possible. Notable among these are Cristyn Magnus, who read many early drafts; Aaron Schiller, who was an early adopter and provided considerable, helpful feedback; {and} Bin Kang, Craig Erb, Nathan Carter, Wes McMichael, Selva Samuel,  Dave Krueger, Brandon Lee, and the students of Introduction to Logic, who detected various errors in previous versions of the book. \medskip
+Antony Eagle would like to thank P.D.\ Magnus and Tim Button for their work from which this text derives, and those acknowledged below who helped them. He also wishes to thank Atheer Al-Khalfa, Caitlin Bettess, Andrew Carter, Keith Dear, Jack Garland, Bowen Jiang, Millie Lewis, Yaoying Li, Jon Opie, Matt Nestor, Jaime von Schwarzburg, and Mike Walmer for comments on successive versions of the Adelaide text.  \medskip
 
 Tim Button would like to thank P.D.\ Magnus for his extraordinary act of generosity, in making \forallx\ available to everyone. Thanks also to Alfredo Manfredini Böhm, Sam Brain, Felicity Davies, Emily Dyson, Phoebe Hill, Richard Jennings, Justin Niven,  and Igor Stojanovic for noticing errata in earlier versions. \medskip
 
-Antony Eagle would like to thank P.D.\ Magnus and Tim Button for their work from which this text derives. He thanks Atheer Al-Khalfa, Caitlin Bettess, Andrew Carter, Keith Dear, Jack Garland, Bowen Jiang, Millie Lewis, Yaoying Li, Jon Opie, Matt Nestor, Jaime von Schwarzburg, and Mike Walmer for comments.  % updated October 2018
+P.D.\ Magnus would like to thank the people who made this project possible. Notable among these are Cristyn Magnus, who read many early drafts; Aaron Schiller, who was an early adopter and provided considerable, helpful feedback; {and} Bin Kang, Craig Erb, Nathan Carter, Wes McMichael, Selva Samuel,  Dave Krueger, Brandon Lee, and the students of Introduction to Logic, who detected various errors in previous versions of the book. 
 
 \subsubsection*{About the Authors}
 
-
-P.D.\ Magnus is a professor of philosophy in Albany, New York. His primary research is in the philosophy of science. \href{https://www.fecundity.com/job/}{\nolinkurl{www.fecundity.com/job/}}
+Antony Eagle is Associate Professor of Philosophy at the University of Adelaide. His research interests include metaphysics, philosophy of probability, philosophy of physics, and philosophy of logic and language. \href{https://antonyeagle.org}{\nolinkurl{antonyeagle.org}}
 \medskip
 
-Tim Button is a University Lecturer, and Fellow of St John's College, at the University of Cambridge. His first book, \emph{The Limits of Realism}, was published by Oxford University Press in 2013. \href{http://nottub.com}{\nolinkurl{nottub.com}}
+
+Tim Button is a Lecturer in Philosophy at UCL. His first book, \emph{The Limits of Realism}, was published by Oxford University Press in 2013. \href{http://www.homepages.ucl.ac.uk/~uctytbu/index.html}{\nolinkurl{www.homepages.ucl.ac.uk/~uctytbu/index.html}}
 \medskip
 
-Antony Eagle teaches philosophy at the University of Adelaide. His research interests include metaphysics, philosophy of probability, philosophy of physics, and philosophy of logic and language. \href{https://antonyeagle.org}{\nolinkurl{antonyeagle.org}}
+P.D.\ Magnus is a professor at the University at Albany, State University of New York. His primary research is in the philosophy of science. \href{https://www.fecundity.com/job/}{\nolinkurl{www.fecundity.com/job/}}
+
 
 
 
