--- a/forallx-adl-frontmatter.tex
+++ b/forallx-adl-frontmatter.tex
@@ -14,29 +14,31 @@
 \vfill
 
 
-\noindent {P.D.\ Magnus}\\
-\emph{University at Albany, State University of New York}\\[1.5cm]
+\noindent {Antony Eagle}\\
+\emph{University of Adelaide}\\[1.5cm]
 
 {Tim Button}\\
-\emph{University of Cambridge}\\[1.5cm]
+\emph{University College London}\\[1.5cm]
 
-{Antony Eagle}\\
-\emph{University of Adelaide}
+{P.D.\ Magnus}\\
+\emph{University at Albany, State University of New York}
 
 
 
 \newpage
 \thispagestyle{empty}%
 
-{\copyright\ \ifthenelse{\year=2005}{\number\year}{2005–\number\year} by P.D.\ Magnus, Tim Button, and Antony Eagle. Some rights reserved.
+{\copyright\ \ifthenelse{\year=2005}{\number\year}{2005–\number\year} by Antony Eagle, Tim Button and P.D.\ Magnus. Some rights reserved.
 
 This version of \forallxadl\ is current as of \today.
 
 \medskip
 
-This book is a derivative work created by Antony Eagle, based upon Tim Button's 2016 Cambridge version of P.D.\ Magnus's \forallx\ (version 1.29). There are pervasive changes, big and small, substantive and cosmetic. You can find the most up to date version of this work at \href{https://github.com/antonyeagle/forallx-adl}{\nolinkurl{github.com/antonyeagle/forallx-adl}}. 
+This book is a derivative work created by Antony Eagle, based upon Tim Button's 2016 Cambridge version of P.D.\ Magnus's \forallx\ (version 1.29). There are pervasive substantive changes in content, theoretical approach, coverage, and appearance. 
 
-The most up-to-date version of \forallx\ Cambridge is available at \href{https://github.com/OpenLogicProject/forallx-cam}{\nolinkurl{github.com/OpenLogicProject/forallx-cam}} – this has diverged noticeably from the 2016 version by now. Magnus' original is available at \href{http://fecundity.com/logic}{\nolinkurl{fecundity.com/logic}}. 
+You can find the most up to date version of this work at \href{https://github.com/antonyeagle/forallx-adl}{\nolinkurl{github.com/antonyeagle/forallx-adl}}. 
+
+The current version of \forallx\ Cambridge is available at \href{https://github.com/OpenLogicProject/forallx-cam}{\nolinkurl{github.com/OpenLogicProject/forallx-cam}}, which has now also diverged noticeably from the 2016 version. Magnus' original is available at \href{http://fecundity.com/logic}{\nolinkurl{fecundity.com/logic}}. 
 
 This book, like its predecessors, is released under a Creative Commons license (Attribution 4.0).\medskip 
 
