--- a/forallx-adl-truthtables.tex
+++ b/forallx-adl-truthtables.tex
@@ -444,8 +444,8 @@ So, for example, consider these sentences: $¬P$, $P \to Q$, $Q$:
 $P$&$Q$&\enot&$P$&$P$&\eif&$Q$&$Q$\\
 \midrule
  T & T & \TTbf{F} & T & T & \TTbf{T} & T & \TTbf{T} \\
- T & F & \TTbf{F} & T & F & \TTbf{F} & T & \TTbf{F} \\
- F & T & \TTbf{T} & F & T & \TTbf{T} & F & \TTbf{T} \\
+ T & F & \TTbf{F} & T & T & \TTbf{F} & F & \TTbf{F} \\
+ F & T & \TTbf{T} & F & F & \TTbf{T} & T & \TTbf{T} \\
  F & F & \TTbf{T} & F & F & \TTbf{T} & F & \TTbf{F} \\\bottomrule
 \end{tabular}
 \end{center} We can see on the third row, the valuation which assigns F to `$P$' and T to `$Q$', each of the sentences is true. So these are jointly consistent.
