started in material about canonical clauses, minor tweaks

--- a/forallx-adl-fol.tex
+++ b/forallx-adl-fol.tex
@@ -94,7 +94,7 @@ Sentence \ref{terms2}: this is a conditional, whose antecedent is sentence \ref{
 Actually we can make an elegant further assumption to incorporate \TFL\ entirely within \FOL. A predicate combines with singular terms to make sentences. But some English predicates combine with \emph{zero} singular terms to make a sentence. We see this in weather expressions like `it is snowing', in which the pronoun `it' doesn't actually refer to anything. This predicate does not denote a property of individuals, because there is no way to attach it to a particular individual. Consider  these examples:  \begin{earg}
     \item[\ex{cpa}] Coober Pedy is a harsh place. It has underground houses.
     	\item[\ex{cpb}] Coober Pedy is a harsh place. It seldom rains there.
-    \end{enumerate}
+    \end{earg}
 In \ref{cpa}, `it' refers to Coober Pedy. Not so in \ref{cpb}: `It' in that example is a \define{dummy pronoun}. Yet `there' does refer to Coober Pedy. Drop the latter pronoun, and you obtain `it seldom rains'. Having already argued that `it' is a dummy pronoun in the longer sentence, it appears to remain a dummy pronoun in the shortened sentence. Try substituting some proper name for `it' in `it seldom rains' and see what nonsense you get. Such predicates, where the dummy pronoun should not be thought of as a genuine gap in the sentence, and with no other singular terms evidnt, should rather be considered \emph{already} sentences by themselves. They can be symbolised by capital letters `$A$' through `$Z$' without any adjacent name. This is exactly how we treated the grammar of atomic sentences of \TFL. So we can in fact simply include all atomic sentences of \TFL\ among these special predicates of \FOL. Since \FOL\ has all the connectives of \TFL\ and all the atomic sentences, we see that \emph{every sentence of \textnormal{\TFL} is also a sentence of \textnormal{\FOL}}.
 
 
