--- a/forallx-adl.tex
+++ b/forallx-adl.tex
@@ -16,13 +16,13 @@
 \mainmatter 
 \renewcommand{\thefigure}{\thechapter.\arabic{figure}}
 \include{forallx-adl-what}
-% \include{forallx-adl-tfl}
-% \include{forallx-adl-truthtables}
-% \include{forallx-adl-fol}
-% \include{forallx-adl-interpretations}
-% \include{forallx-adl-prooftfl}
-% \include{forallx-adl-prooffol}
-% \include{forallx-adl-appendices}
+\include{forallx-adl-tfl}
+\include{forallx-adl-truthtables}
+\include{forallx-adl-fol}
+\include{forallx-adl-interpretations}
+\include{forallx-adl-prooftfl}
+\include{forallx-adl-prooffol}
+\include{forallx-adl-appendices}
 \include{forallx-adl-backmatter}
 
 \end{document}
