finalised material about canonical clauses, trees, and attempted to link up material on Sentential to that discussion.

--- a/forallx-adl.sty
+++ b/forallx-adl.sty
@@ -30,7 +30,8 @@ SizeFeatures={Size=42}]{Constantia Bold Italic}
  \usepackage{fnpct}
 \frenchspacing 
 \usepackage{mathtools}
-\usepackage{qtree}
+\usepackage{tikz-qtree}
+% \usepackage{tikz-qtree-compat}
 
 
 
