--- a/forallx-adl-tfl.tex
+++ b/forallx-adl-tfl.tex
@@ -54,29 +54,31 @@ The examples illustrate the idea of validity – conclusiveness in virtue of str
 
 Since arguments are made of sentences, the logical structure of an argument will be related to the grammatical structure of the sentences within it. We've already seen in §\ref{s:truthvalues} that arguments are made up of declarative sentences. One standard way of analysing the grammatical structure of a declarative sentence is to break it into constituent phrases (such approaches are known as  \define{phrase structure grammars}). The kind of structure is usefully depicted in a hierarchical \define{syntactic tree}. So we might consider the example \begin{earg}
 	\item[\ex{tariq}] Tariq is a man.
-\end{earg} This sentence can be divided into two main parts: the \define{noun phrase} `Tariq', and the \define{verb phrase} `is a man'. In this example, the verb phrase itself divides into the verb `is' and the \define{determiner phrase} `a man'. We will return to the internal structure of sentences in §\ref{s:FOLBuildingBlocks}. This phrase structure is depicted in Fig.~\ref{fig:tariq}. 
+\end{earg} This sentence can be divided into two main parts: the \define{noun phrase} `Tariq', and the \define{verb phrase} `is a man'. In this example, the verb phrase itself divides into the verb `is' and the \define{determiner phrase} `a man'. We will return to the internal structure of sentences in §\ref{s:FOLBuildingBlocks}. This phrase structure is depicted in the tree in Figure \ref{fig:tariq}. 
 \begin{figure}
-	 \Tree [.S [.NP Tariq ] [.VP is [.DP a man ] ] ]
-	\caption{A phrase structure tree for Example \ref{tariq}. \label{fig:tariq}}
+\begin{tikzpicture}[sibling distance=16pt]
+	\Tree [.S [.NP Tariq ] [.VP is [.DP a man ] ] ]
+\end{tikzpicture}
+\caption{A phrase structure tree for Example \ref{tariq}. \label{fig:tariq}}
 \end{figure}
-Let's look at a more complicated example. 
 
+Let's look at a more complicated example. Consider \begin{earg}
+	\item[\ex{alice}] Alice will ace the test, or Bob will.
+\end{earg} First we note that this sentence is elliptical, the verb phrase `ace the test' being omitted after `Bob will' as it is understood to be supplied by the first clause of the sentence.\footnote{This kind of ellision is crucial evidence for phrase structure grammars, for only phrases can be omitted in this way: witness the ungrammatical `Alice will ace the test and Bob will the', where arbitrary words are omitted that do not form a grammatical phrase. This is evidence that English syntax is sensitive to the phrasal structure of sentences, and does not treat them as merely a string of words. (See Paul Elbourne, \emph{Meaning}, Oxford University Press, 2011, pp. 74–6.)} The full tree, with the elided phrase supplied (shown with the label in a box at the lower right), is depicted in Figure \ref{fig:alice}. In this example, the whole sentence is a compound of two clauses which are sentences in their own right, connected by the coordinator `or'.
+\begin{figure}
+\begin{tikzpicture}[sibling distance=13pt]
+ 	\Tree [.S [.S [.NP Alice ] [.VP will [.VP ace [.DP the test ] ] ] ] [ [.Coord or ] [.S [.NP Bob ] [.VP will [.\node[draw]{VP}; \edge[roof]; {ace the test}  ] ] ] ] ]
+ \end{tikzpicture} 	\caption{A phrase structure tree for Example \ref{alice}. \label{fig:alice}}
+\end{figure} 
 
-\Tree [.S [.S [.NP Alice ] [.VP_1 will [.VP_2 ace [.DP the test ] ] ] ] [ [.Conj and ] [.S [.NP Bob ] [.VP_3 will   \qroof{ace the test}.VP_2  !{\qframesubtree}  ] ] ] ]
-
-has a grammatical structure that sees  phrases
-
-
-
-
-When analysing sentence structure, a useful notion is that of a \define{canonical clause}.\footnote{A more precise treatment of the notion of a canonical clause can be found in Rodney Huddleston and Geoffrey Pullum \emph{A Student's Introduction to English Grammar}, Cambridge University Press, 2005, pp. 24–5.} These are the simplest units of English sentences that can constitute a sentence by themselves. Here are some examples: 
+When analysing the structure of compound sentences, a useful notion is that of a \define{canonical clause}.\footnote{A fuller treatment of canonical clauses can be found in Rodney Huddleston and Geoffrey Pullum, \emph{A Student's Introduction to English Grammar}, Cambridge University Press, 2005, pp. 24–5.} These are the simplest units of English sentences that can constitute a sentence by themselves. Here are some examples: 
 \begin{earg}
 	\item[\ex{cc1}] It is raining.
 	\item[\ex{cc2}] Jenny is happy.
 	\item[\ex{cc3}] She has read your article.
 	\item[\ex{cc4}] They knew the victim.
 \end{earg}
-A canonical clause has internal structure too, but its parts are not themselves sentences. Typically they are a \define{noun phrase} (`Jenny', `They'), sometimes called the \define{grammatical subject}, and a \define{verb phrase} (`is happy', `knew the victim'), sometimes called a \define{predicate}. 
+A canonical clause has internal structure too, but its parts are not themselves sentences. It is composed of a \define{grammatical subject}, typically but not always a noun phrase (`Jenny', `She'), and a \define{predicate}, always a verb phrase (`knew the victim', `is happy'). 
 
 The following, in contrast with the previous examples, are non-canonical clauses: 
 \begin{earg}
@@ -94,16 +96,11 @@ The following, in contrast with the previous examples, are non-canonical clauses
 
 This is not a linguistics course, so we are not concerned directly with understanding English grammar. But the idea of a canonical clause is very important for the logic we are examining in this part of the course. Sentential logic is, more or less, the logic that helps us understand and analyse arguments in terms of their constituent canonical clauses. 
 
-
-
-
-
-
-
-
 \section{Identifying argument structure}\label{ss.idargstr}
 
-How can we identify the logical structure of an argument? The logical structure of an argument is the form one arrives at by `abstracting away' the details of the words in an argument, \emph{except for a special set of words}. In the examples from §\ref{s:ValidityInVirtueOfForm}, we basically aim to identify the canonical clauses that are constituents of the sentences in the argument, or are constituents of reformulated paraphrases of those sentences. Return to this argument: \begin{earg}
+How can we identify the logical structure of an argument? The logical structure of an argument is the form one arrives at by `abstracting away' the details of the words in an argument, \emph{except for a special set of words}, the \define{structural words}. This connects with what we have just been saying, because in many of the examples from §\ref{s:ValidityInVirtueOfForm}, the arguments can be analysed as involving canonical clauses, perhaps linked by the structural words `and', `or', `not', `if … then …' and `… if and only if …'. So our efforts to identify the logical structure of arguments often coincide with linguist's efforts to identify the canonical clauses that constitute the sentences in those arguments – or, at least, constitute some plausible paraphrase or reformulation of those sentences.
+
+We can see this if we return to this earlier argument: \begin{earg}
 	\item[] Jenny is either happy or sad.
 	\item[] Jenny is not happy.
 	\item[So:] Jenny is sad.
@@ -125,7 +122,12 @@ And we paraphrase the non-canonical clause `Jenny is not happy' as the negative 
 
 In this and the other examples above, we removed all details of the arguments except for the special words `and', `or', `not' and `if …, then …', and replaced the other clauses in the argument (or its near paraphrase) by placeholder letters `A', `B', etc. (We were careful to replace the same clause by the same placeholder every time it appeared.)
 
-This raises another question. What makes those words special? Logicians tend to take a pragmatic attitude to this question. They say: \emph{nothing}! If you had chosen different words, you would have come up with a different structure. But there are practical reasons why the words I've already highlighted are useful ones, which I will now discuss.
+Sharp-eyed readers will have noticed that our list of special words doesn't precisely line up with the canonical clauses we introduced in §\ref{ss.canonical}. Consider the non-canonical clause `She said that Jenny is sad', in which the canonical clause `Jenny is sad' is subordinate within an indirect speech report. Because `She said that' is not on our special list of words, we cannot analyse this sentence as composed from a canonical clause and some structural expression. So for the purposes of sentential logic, we will treat `She said that Jenny is sad' \emph{as if} it were canonical, even though it is not. From the point of view of our structural words, this sentence doesn't have any further structure that we can identify. Such \define{quasi-canonical clauses} – clauses that do not feature any of our list of structural words – will also be replaced by placeholder letters in our analysis.
+
+
+This raises another question. What makes those words special? Logicians tend to take a pragmatic attitude to this question. They say: \emph{nothing}! If you had chosen different words, you would have come up with a different structure. Linguists take a very expansive view of structural words, so that the class of canonical clauses is rather small, and there is a lot of structure to be identified in natural language. For example, the presence of modal auxiliaries (like `will' or `must', as in `James \underline{must} eat'), verb inflections other than the present tense (e.g., `they \underline{took} snuff'), and subordination (as in `\underline{Etta knew that} peaches were abundant'), in addition to items on our list of structural words, suffices to make a clause non-canonical. And there are logics which do take these to be structural words: modal logics, tense logics, and epistemic logics treat these as structural words and provide recipes for the structural analysis of arguments that abstract away features other than these words. But there is no fundamental principle that divides words once and for all into structural words and other words. So logicians are more interested in quasi-canonical clauses, given some fixed list of structural words, when using logic to model or represent natural languages. 
+
+We will start simply, and focus on the list of truth-functional coordinators, principally `and', `or', `not', `if … then …' and `… if and only if …'. There are practical reasons why these words are useful ones to focus on initially, which I will now discuss.
 
 \section{Formal languages}
 
@@ -133,22 +135,22 @@ In logic, a \define{formal language} is a language which is particularly suited 
 
 Formal languages are not the same as natural languages, like English. The languages we will be looking at are much more limited in their expressive power than English, and not subject to ambiguity or imprecision in the way that English is.  But a formal language can be very useful in \emph{representing} or modelling features of natural language. In particular, they are very good at capturing the \emph{structure} of natural language sentences and arguments. The semantics we give for such languages reflects that this is their primary use, as you will see. The languages assign fixed meanings only to those expressions which can be used to represent structure.
 
-In this chapter we will begin developing a formal language which will allow us to represent many sentences of English, and arguments involving those sentences. The language will have a very small basic vocabulary, since it will have expressions corresponding to the English sentence connectives `and', `or', `not' and `if …, then …' and `if and only if'. These words are a good class to focus on in developing a formal language, because languages with connectives analogous to these feature a good balance between being useful and being well behaved and easy to study. The language we will develop is called \TFL, and the study of that language and its features is called \emph{sentential logic}. (It also has other names: see Appendix~\ref{app.notation}.)
+In this chapter we will begin developing a formal language which will allow us to represent many sentences of English, and arguments involving those sentences. The language will have a very small basic vocabulary, since it will have expressions corresponding to the English coordinators `and', `or', `not' and `if …, then …' and `if and only if'. The language represents these coordintors by expressions called \define{sentence connectives}, so-called because like coordinators they allow simple sentences of the language to be combined into more complex sentences. These words are a good class to focus on in developing a formal language, because languages with expressions analogous to these feature a good balance between being useful and being well behaved and easy to study. The language we will develop is called \TFL, and the study of that language and its features is called \emph{sentential logic}. (It also has other names: see Appendix~\ref{app.notation}.) 
 
-Once we have our formal language \TFL, we will be able to go on (in chapter \ref{ch.TruthTables}) to show that it has a very nice feature: it is able to represent the structure of a large class of valid natural language arguments. So while logic can't help us with every good argument, and it can't even help us with every conclusive argument, it can help us to understand arguments that are valid, or conclusive due to their structure – at least when that structure involves the English sentence connectives `and', `or', `not', `if' and various related expressions.
+Once we have our formal language \TFL, we will be able to go on (in chapter \ref{ch.TruthTables}) to show that it has a very nice feature: it is able to represent the structure of a large class of valid natural language arguments. So while logic can't help us with every good argument, and it can't even help us with every conclusive argument, it can help us to understand arguments that are valid, or conclusive due to their structure, when that structure involves the coordinators `and', `or', `not', `if' and various related expressions. 
 
+We will see later in this book that one could take additional  expressions in natural language to be involved is determining the structure of a sentence or argument. The language we develop in chapter~\ref{ch.FOL} is one that is suited to represent what we get when we take names like `Juanita', predicates like `is a vixen' or `is a fox', and quantifier expressions like `every' and `some' to be structural – see also §\ref{s:MoreMonadic}. And as we have mentioned, there are still other formal logical languages, unfortunately beyond the scope of this book, which take still other words or grammatical categories as structural: logics which take modal words like `necessarily' or `possibly' as structural, and logics which take temporal adverbs like `always' and `now' as structural.\footnote{Some arguments will be valid in richer logical frameworks, but not according to the more austere framework for logical structure provided by \TFL. For example `Sylvester is always active; so Sylvester is active now' is conclusive. From the point of view of temporal logic, the argument has this form `Always A; so now A', which is valid in normal temporal logics. But it is not valid according to \TFL, because the premise `Sylvester is always active' has no internal structural words that occur on the list of coordinators that \TFL\ can represent.} What we notice here is that using logic to model natural language arguments inevitably involves a compromise. If we have lots of structural words, we can show many conclusive arguments to be valid, but our logic is complex and involves many different sentence connectives. If we take relatively few words as structural, we can represent fewer conclusive arguments as valid, but our formal language is a lot easier to work with. 
 
-We will see later in this book that one could take additional  expressions in natural language to be involved is determining the structure of a sentence or argument. The language we develop in chapter~\ref{ch.FOL} is one that is suited to represent what we get when we take names like `Juanita', predicates like `is a vixen' or `is a fox', and quantifier expressions like `every' and `some' to be structural – see also §\ref{s:MoreMonadic}. And there are still other formal logical languages, unfortunately beyond the scope of this book, which take still other words or grammatical categories as structural: logics which take modal words like `necessarily' or `possibly' as structural, and logics which take temporal adverbs like `always' and `now' as structural. 
+We will start now by putting those tantalising observations about richer logics out of your mind! We'll focus to begin with on the language \TFL, and on how we can use it to model arguments in English featuring some particular structural words, including those we've just highlighted above. This collection of structural words has struck many logicians over the years as providing a good balance between simplicity and strength, ideal for an introduction to logic.
 
-But for now, put those tantalising observations out of your mind! We'll focus to begin with on the language \TFL, and on how we can use it to model arguments in English featuring some particular structural words, including those we've just highlighted above. 
 
 \section{Atomic sentences}
-A \define{subsentence} of a sentence is a phrase occuring in a sentence which is itself a grammatical sentense. I started isolating the form of an argument, in §\ref{s:ValidityInVirtueOfForm}, by replacing subsentences of sentences with individual placeholder letters. Thus in the first example of this section, `it is raining outside' is a subsentence of `If it is raining outside, then Jenny is miserable', and we replaced this subsentence with `A'. 
+In §\ref{s:ValidityInVirtueOfForm}, we started isolating the form of an argument by replacing quasi-canonical clauses (those including none of our list of structural words) within the argument with individual placeholder letters. Thus in the first example of this section, `it is raining outside' is a quasi-canonical clause of `If it is raining outside, then Jenny is miserable', and we replaced this clause with `A'. 
 
-Our artificial language, \TFL, pursues this idea absolutely ruthlessly. We start with some \emph{atomic sentences}. These will be the basic building blocks out of which more complex sentences are built. We will use upper case italic letters for atomic sentences of \TFL. There are only twenty-six letters of the alphabet, but there is no limit to the number of atomic sentences that we might want to consider. By adding numerical subscripts to letters, we obtain new atomic sentences. Upper case letters, with or without subscripts, are all the atomic sentences there are. So, here are five different atomic sentences of \TFL:
+Our artificial language, \TFL, pursues this idea absolutely ruthlessly. We start with some \emph{atomic sentences}, which are analogs of the canonical clauses of natural languages.  These will be the basic building blocks out of which more complex sentences are built. Unlike natural languages, these simplest sentences of \TFL\ have no interesting internal structure at all. The atomic sentences of \TFL will consist of upper case italic letters, with or without numerical subscripts. There are only twenty-six letters of the alphabet, but there is no limit to the number of atomic sentences that we might want to consider, so we add numerical subscripts to each letter to extend our library of atomic sentences indefinitely. This procedure does give us atomic sentences with some syntax, but it is irrelevant to meaning: there is no connection between `$A_{8}$' and `$A_{67}$' just because they both involve `$A$'. Likewise, there is no connection between `$D_{17}$' and `$G_{17}$' even though they share the same numerical subscript. Upper case italic letters, with or without subscripts, are all the atomic sentences there are. So, here are five different atomic sentences of \TFL:
 	$$A, P, P_{1}, P_{2}, A_{234}.$$ 
 
-Atomic sentences are the basic building blocks of \TFL. But what motivates their introduction is the fact that they can be used to represent, or \emph{symbolise}, certain English sentences. To do this, we provide a \define{symbolisation key}, such as the following:
+Atomic sentences are the basic building blocks of \TFL. But what motivates their introduction is the fact that they can be used to represent, or \emph{symbolise}, certain English sentences. To do this, we provide a \define{symbolisation key}, such as the following, which assigns a temporary linkage between some atomic sentences of \TFL, and some quasi-canonical sentences of the natural language we are representing using \TFL, in this case, English:
 	\begin{ekey}
 		\item[A] It is raining outside.
 		\item[C] Jenny is miserable.
@@ -158,21 +160,25 @@ In doing this, we are not fixing this symbolisation \emph{once and for all}. We 
 		\item[A] Jenny is an anarcho-syndicalist.
 		\item[C] Dipan is an avid reader of Tolstoy.
 	\end{ekey}
-Given this flexibility, it isn't true that a sentence of \TFL\ means the same thing as any particular natural language sentence – see also §\ref{sec:symvstrans}. The question of what any given atomic sentence of \TFL\ means is actually a bit hard to make sense of; we will return to it in §\ref{s:CompleteTruthTables}.
+Given this flexibility, it isn't true that a sentence of \TFL\ \textbf{means the same thing} as any particular natural language sentence – see also §\ref{sec:symvstrans}. The question of what any given atomic sentence of \TFL\ means is actually a bit hard to make sense of; we will return to it in §\ref{s:CompleteTruthTables}.
 
 
-But it is important to understand that whatever structure an English sentence might have is lost when it is symbolised by an atomic sentence of \TFL. From the point of view of \TFL, an atomic sentence is just a letter. It can be used to build more complex sentences, but it cannot be taken apart. So we cannot use \TFL\ to symbolise arguments whose validity depends on structure within atomic sentences. 
+But it is important to understand that whatever internal structure an English sentence might have is lost when it is symbolised by an atomic sentence of \TFL. From the point of view of \TFL, an atomic sentence is just a letter. It can be used to build more complex sentences, but it cannot be taken apart. So we cannot use \TFL\ to symbolise arguments whose validity depends on structure within sentences that are symbolised as atomic sentences of \TFL, such as arguments whose conclusiveness turns on different structural words than those \TFL seeks to capture, or arguments which depend on the internal subject-predicate structure of canonical clauses.
 
 
 
 
 
 \keyideas{
-	\item The formal language \TFL\ is designed to model the structure of English sentences involving `and', `or', `not', and `if', and related expressions.
-	\item We manage this by abstracting away any other aspects of English sentences, using structureless atomic sentences to stand in for any parts of sentences that do not feature these privileged expressions.
+	\item Arguments are made of sentences, and to understand the structure of an argument it is often important to understand the syntactic structure of those sentences, including analysing those sentences into their simplest constituents, roughly, how a compound sentence can be constructed by combining canonical clauses. 
+	\item The formal language \TFL\ is designed to model the structure of some English arguments involving sentences compounded using the coordinating expressions `and', `or', `not', and `if', and related expressions.
+	\item We manage this by abstracting away any other aspects of English sentences, using structureless atomic sentences to represent clauses within those sentences that do not feature these privileged expressions.
 	\item Lots of other English words and phrases could be treated as structural, and different formal languages can be motivated by other views about the structure of natural language sentences. But \TFL\ represents a particularly well behaved aspect of English sentence structure.
 }
 
+\practiceproblems
+
+\problempart This argument is invalid in English: 'There is water in the glass and it is cold; therefore it is cold'. Comment on why it is invalid, and what potential pitfalls arise when considering how to symbolise this argument into \TFL. 
 
 
 \chapter{Connectives}\label{s:TFLConnectives}
